; ModuleID = '/home/carl/AnghaBench/openwrt/package/network/utils/owipcalc/src/extr_owipcalc.c_cidr_push.c'
source_filename = "/home/carl/AnghaBench/openwrt/package/network/utils/owipcalc/src/extr_owipcalc.c_cidr_push.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cidr = type { %struct.cidr* }

@stack = common dso_local global %struct.cidr* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cidr*)* @cidr_push to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cidr_push(%struct.cidr* %0) #0 {
  %2 = alloca %struct.cidr*, align 8
  store %struct.cidr* %0, %struct.cidr** %2, align 8
  %3 = load %struct.cidr*, %struct.cidr** %2, align 8
  %4 = icmp ne %struct.cidr* %3, null
  br i1 %4, label %5, label %10

5:                                                ; preds = %1
  %6 = load %struct.cidr*, %struct.cidr** @stack, align 8
  %7 = load %struct.cidr*, %struct.cidr** %2, align 8
  %8 = getelementptr inbounds %struct.cidr, %struct.cidr* %7, i32 0, i32 0
  store %struct.cidr* %6, %struct.cidr** %8, align 8
  %9 = load %struct.cidr*, %struct.cidr** %2, align 8
  store %struct.cidr* %9, %struct.cidr** @stack, align 8
  br label %10

10:                                               ; preds = %5, %1
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
